--- a/src/locale/messages.ar.json
+++ b/src/locale/messages.ar.json
@@ -223,9 +223,6 @@
     "seo.email30min.keywords": "بريد 30 دقيقة, بريد مؤقت ممتد, صندوق مؤقت, تمب ميل, بريد حارق, تحقق بريد للأعمال, بريد مؤقت طويل, 30 دقيقة",
     "home.section.hero.title.label": " خدمة البريد الإلكتروني المؤقت المجانية ",
     "home.section.hero.subtitle.label": " أنشئ فوراً {$START_TAG_STRONG}بريداً مؤقتاً{$CLOSE_TAG_STRONG} مع {$START_TAG_STRONG}TempMail4U{$CLOSE_TAG_STRONG}. احصل على {$START_EMPHASISED_TEXT}عنوان بريد مؤقت{$CLOSE_EMPHASISED_TEXT} يحمي خصوصيتك، بلا تسجيل، بلا رسائل مزعجة، بلا مخاطرة. استخدمه للتسجيل السريع بالمواقع، اختبار التطبيقات، التنزيلات، أو كلما احتجت {$START_EMPHASISED_TEXT}بريداً حارقاً{$CLOSE_EMPHASISED_TEXT} يحافظ على نظافة بريدك الحقيقي. ",
-    "home.section.what.title.label": " ما هو البريد المؤقت؟ ",
-    "home.section.what.para1.label": " {$START_TAG_STRONG}البريد المؤقت{$CLOSE_TAG_STRONG} (يُسمى أيضاً {$START_EMPHASISED_TEXT}البريد القابل للاستخدام مرة واحدة، البريد المزيف، البريد الحارق، أو تمب ميل{$CLOSE_EMPHASISED_TEXT}) هو صندوق قصير العمر للاستخدامات عبر الإنترنت. بدلاً من إعطاء عنوان Gmail أو Outlook أو Yahoo الحقيقي، تحصل على صندوق مجهول يُحذف تلقائياً بعد مدة محددة. ",
-    "home.section.what.para2.label": " وهو مثالي لـ {$START_TAG_STRONG}التسجيل في المواقع، تنزيل الملفات، استلام رموز التحقق، أو اختبار التطبيقات الجديدة{$CLOSE_TAG_STRONG}. وبعد الانتهاء، يختفي العنوان وتبقى رسائلك الحقيقية آمنة وخالية من الإزعاج. ",
     "home.section.why.title.label": " لماذا تحتاج إلى تمب ميل؟ ",
     "home.section.why.intro.label": " مشاركة بريدك الحقيقي في كل مكان أمر محفوف بالمخاطر. غالباً ما تُباع العناوين للمسوقين، وتستهدفها الهجمات عند تسرب قواعد البيانات، وتغرق الرسائل المزعجة صندوقك. {$START_TAG_STRONG}استخدام بريد مؤقت يمنحك السيطرة.{$CLOSE_TAG_STRONG}",
     "home.section.why.li1.label": "احمِ بريدك الشخصي من الرسائل المزعجة والإعلانات",
@@ -241,20 +238,12 @@
     "home.section.how.step3.title.label": " 3. احفظه أو اتركه ينتهي ",
     "home.section.how.step3.desc.label": " افتراضياً تبقى الرسائل 24 ساعة. ويمكنك حفظ رابط الصندوق لإبقائه فعالاً حتى 7 أيام عند الحاجة. ",
     "home.section.when.title.label": " متى ينبغي استخدام تمب ميل؟ ",
-    "home.section.when.intro.label": " البريد المؤقت ليس لكل شيء؛ هو الأفضل للمهام السريعة منخفضة المخاطر والقابلة للتخلص. فيما يلي أشهر الاستخدامات: ",
-    "home.section.when.card1.label": "تسجيلات مواقع لمرة واحدة",
     "home.section.when.card2.label": "اختبار التطبيقات أو الإصدارات التجريبية أو أدوات SaaS",
     "home.section.when.card3.label": "خصومات التسوق عبر الإنترنت والقسائم",
     "home.section.when.card4.label": "تنزيل الكتب الإلكترونية أو الموارد المجانية",
     "home.section.when.card5.label": "تجنب النشرات البريدية غير المرغوب فيها",
     "home.section.when.card6.label": "البقاء مجهولاً في المنتديات أو المدونات",
     "home.section.who.title.label": " من يستخدم البريد الحارق؟ ",
-    "home.section.who.intro.label": " البريد المؤقت ليس للمبرمجين فقط. {$START_TAG_STRONG}أي شخص يهتم بالخصوصية والأمان أو يرغب في صندوق خالٍ من الفوضى سيستفيد منه:{$CLOSE_TAG_STRONG}",
-    "home.section.who.li1.label": "{$START_TAG_STRONG}الطلاب{$CLOSE_TAG_STRONG} للتسجيل في أدوات الدراسة والموارد",
-    "home.section.who.li2.label": "{$START_TAG_STRONG}المطورون والمختبرون{$CLOSE_TAG_STRONG} لإنشاء حسابات اختبار",
-    "home.section.who.li3.label": "{$START_TAG_STRONG}المتسوقون{$CLOSE_TAG_STRONG} للحصول على العروض والقسائم أو التجارب المجانية",
-    "home.section.who.li4.label": "{$START_TAG_STRONG}المسوقون{$CLOSE_TAG_STRONG} لاختبار الحملات دون المخاطرة بالبريد الأساسي",
-    "home.section.who.li5.label": "{$START_TAG_STRONG}المستخدمون العاديون{$CLOSE_TAG_STRONG} الذين يريدون صندوقاً خالياً من الرسائل المزعجة",
     "home.section.comparison.title.label": " البريد المؤقت مقابل البريد التقليدي ",
     "home.section.comparison.th.feature.label": "الميزة",
     "home.section.comparison.th.temp.label": "البريد المؤقت",
@@ -320,13 +309,11 @@
     "home.section.security.para.label": " على عكس الخدمات المشبوهة، لا نتتبعك أو نسجل بياناتك أو نبيع معلوماتك. كل صندوق {$START_TAG_STRONG}خاص ومجهول ويُحذف تلقائياً{$CLOSE_TAG_STRONG} بعد انتهاء مدته. هذا يمنحك أماناً كاملاً وراحة بال عند استخدام تمب ميل. ",
     "home.section.variants.title.label": " أنواع تمب ميل المتاحة ",
     "home.section.variants.intro.label": " المهام المختلفة تحتاج أعماراً مختلفة؛ لهذا نوفر عدة خيارات: ",
-    "home.section.variants.li1.label": "{$START_TAG_STRONG}بريد 10 دقائق{$CLOSE_TAG_STRONG} – مثالي للأكواد السريعة",
     "home.section.variants.li2.label": "{$START_TAG_STRONG}بريد 20 دقيقة{$CLOSE_TAG_STRONG} – وقت إضافي للتسجيل",
     "home.section.variants.li3.label": "{$START_TAG_STRONG}بريد 30 دقيقة{$CLOSE_TAG_STRONG} – عند الحاجة إلى وصول مؤقت ممتد",
     "home.section.variants.li4.label": "{$START_TAG_STRONG}صندوق محفوظ 7 أيام{$CLOSE_TAG_STRONG} – للمشاريع والتجارب والمتابعات",
     "home.section.faq.title.label": " الأسئلة الشائعة حول البريد المؤقت ",
     "home.section.faq.q1.label": "ما هو البريد المؤقت؟",
-    "home.section.faq.a1.label": " البريد المؤقت (ويُسمى أيضاً صندوقاً لمرة واحدة أو بريداً قابلاً للتخلص أو عنواناً حارقاً) هو حساب قصير العمر يمكنك استخدامه للتسجيل في المواقع واستلام رموز التحقق أو حماية بريدك الحقيقي من الرسائل المزعجة. ",
     "home.section.faq.q2.label": "كيف أنشئ بريداً مؤقتاً؟",
     "home.section.faq.a2.label": " لست بحاجة للتسجيل. افتح هذه الصفحة فيُنشأ صندوقك المجهول فوراً. يمكنك تحديثه للحصول على عنوان جديد أو اختيار اسم مستخدم مخصص قبل رمز {$INTERPOLATION}. ",
     "home.section.faq.q3.label": "ما مدة بقاء الصندوق المؤقت؟",
@@ -336,13 +323,11 @@
     "home.section.faq.q5.label": "لِمَ يُستخدم البريد المزيف؟",
     "home.section.faq.a5.label": " هذه العناوين قصيرة الأجل مثالية للتسجيل في المواقع الجديدة، اختبار التطبيقات، التسوق عبر الإنترنت، تنزيل الملفات، أو في أي مكان لا تريد فيه مشاركة بريدك الشخصي. تساعدك على إبقاء صندوقك الأساسي نظيفاً. ",
     "home.section.faq.q6.label": "هل يمكنني الإرسال من هذا العنوان؟",
-    "home.section.faq.a6.label": " لا. هذه الصناديق للاستقبال فقط. صُممت للتسجيلات والتحققات والاستخدام السريع، وليست للإرسال أو التواصل طويل الأمد. ",
     "home.section.faq.q7.label": "ما الفرق بين تمب ميل والبريد العادي؟",
     "home.section.faq.a7.label": " تتطلب الخدمات العادية (مثل Gmail وYahoo وOutlook) معلومات شخصية وتبقى دائمة وغالباً ما تتعرض للرسائل المزعجة. بينما البريد المؤقت مجهول ولا يحتاج تسجيل وينتهي تلقائياً. ",
     "home.section.faq.q8.label": "هل أستطيع إطالة عمر الصندوق؟",
     "home.section.faq.a8.label": " نعم. بحفظ الجلسة أو نسخ رابط الوصول الفريد يمكنك العودة خلال 7 أيام. بعد ذلك يُحذف الصندوق نهائياً. ",
     "home.section.faq.q9.label": "هل لديكم خيار بريد 10 دقائق؟",
-    "home.section.faq.a9.label": " نعم. نوفر {$START_TAG_STRONG}بريد 10 دقائق{$CLOSE_TAG_STRONG} بالإضافة إلى 20 و30 دقيقة للاستخدام السريع والقابل للتخلص. مثالي للتسجيلات القصيرة أو رموز التحقق لمرة واحدة. ",
     "home.section.faq.q10.label": "لماذا أستخدم صندوقاً خاصاً بدلاً من بريدي الحقيقي؟",
     "home.section.faq.a10.label": " استخدام عنوان مؤقت يحمي خصوصيتك ويمنع الرسائل المزعجة ويحافظ على نظافة صندوقك الأساسي ويقلل مخاطر تسريب بياناتك الشخصية أو بيعها. ",
     "home.section.cta.title.label": " اختبر تواصلاً خاصاً بحق ",
@@ -351,7 +336,6 @@
     "home.section.cta.disclaimer.label": " مجاني 100% دائماً • آمن • بدون رسائل مزعجة ",
     "seo.home.siteName": "TempMail4u",
     "privacy.title": "سياسة الخصوصية",
-    "privacy.lastUpdated": "آخر تحديث: ديسمبر 2024",
     "privacy.introduction.title": "1. المقدمة",
     "privacy.introduction.content": " مرحباً بك في خدمة البريد الإلكتروني المؤقت (\"نحن\" أو \"لنا\"). نحن ملتزمون بحماية خصوصيتك وضمان أمان معلوماتك الشخصية. توضح سياسة الخصوصية هذه كيفية جمعنا لمعلوماتك واستخدامها والإفصاح عنها وحمايتها عند استخدامك لخدمة البريد المؤقت لدينا. ",
     "privacy.infoCollect.title": "2. المعلومات التي نجمعها",
@@ -548,6 +532,38 @@
   , "seo.email30min.faq.q7": "كم رسالة أستطيع استقبالها؟"
   , "seo.email30min.faq.a7": "لا يوجد حد أثناء فترة 30 دقيقة."
   , "breadcrumbs.home": "الصفحة الرئيسية"
-  , "privacyPolicy.title": "سياسة الخصوصية"
+  , "privacyPolicy.title": "سياسة الخصوصية",
+
+
+  
+  "home.section.what.title.label": "ما هو البريد الإلكتروني المؤقت؟ (بريد لمرة واحدة)",
+  "home.section.what.para1.label": "يعد {$START_TAG_STRONG}البريد الإلكتروني المؤقت{$CLOSE_TAG_STRONG} (المعروف أيضًا بـ {$START_EMPHASISED_TEXT}البريد الإلكتروني القابل للاستخدام لمرة واحدة، أو البريد الوهمي، أو البريد المؤقت{$CLOSE_EMPHASISED_TEXT}) صندوق بريد قصير المدى يمكنك استخدامه للأنشطة عبر الإنترنت. بدلاً من مشاركة بريدك الشخصي مثل Gmail أو Outlook أو Yahoo، تحصل على صندوق بريد مجهول يتم حذفه تلقائيًا بعد فترة محددة.",
+  "home.section.what.para2.label": "هو مثالي لـ {$START_TAG_STRONG}التسجيل في المواقع، تحميل الملفات، استلام رموز التحقق، أو تجربة تطبيقات جديدة{$CLOSE_TAG_STRONG}. بمجرد الانتهاء، يختفي العنوان ويحافظ على بريدك الشخصي آمنًا وخاليًا من الرسائل المزعجة.",
+  "home.section.when.intro.label": "البريد الإلكتروني المؤقت ليس مناسبًا لكل شيء، بل هو الأفضل للمهام السريعة، منخفضة المخاطر، والمؤقتة. يعتمد عليه الكثير للتسجيل في {$START_TAG_STRONG}وسائل التواصل الاجتماعي{$CLOSE_TAG_STRONG} مثل إنستغرام، ديسكورد، ريديت، تيك توك، تيليجرام، أو فيسبوك. كما أنه مفيد لتجربة التطبيقات، تحميل الموارد، أو الحفاظ على الخصوصية أثناء التصفح.",
+  "home.section.when.card1.label": "تسجيلات المواقع لمرة واحدة",
+  "home.section.when.card7.label": "إنشاء حسابات على إنستغرام، فيسبوك، سناب شات، وتويتر X",
+  "home.section.when.card8.label": "الانضمام بأمان إلى ديسكورد، ريديت، وتيليجرام",
+  "home.section.when.card9.label": "التسجيل في تيك توك أو Kick مع استلام OTP فورًا",
+  "home.section.when.card10.label": "توثيق حسابات الألعاب على Steam وEpic Games وRockstar",
+  "home.section.when.card11.label": "الوصول إلى منصات البث مثل نتفليكس، أمازون برايم، وHulu",
+  "home.section.who.intro.label": "البريد المؤقت مفيد للعديد من الفئات. {$START_TAG_STRONG}إليك أبرز المستخدمين وكيف يستفيدون منه:{$CLOSE_TAG_STRONG}",
+  "home.section.who.li1.label": "{$START_TAG_STRONG}الطلاب{$CLOSE_TAG_STRONG} – التسجيل في أدوات الدراسة، الدورات عبر الإنترنت، وبوابات الجامعات دون ازدحام بريدك الأساسي.",
+  "home.section.who.li2.label": "{$START_TAG_STRONG}المطورون والمختبرون{$CLOSE_TAG_STRONG} – إنشاء حسابات اختبار للتطبيقات، أدوات SaaS، والنسخ التجريبية بسرعة.",
+  "home.section.who.li3.label": "{$START_TAG_STRONG}المتسوقون{$CLOSE_TAG_STRONG} – الحصول على العروض، القسائم، والفترات التجريبية المجانية على مواقع التجارة الإلكترونية وتجنب الرسائل المزعجة.",
+  "home.section.who.li4.label": "{$START_TAG_STRONG}المسوقون{$CLOSE_TAG_STRONG} – تجربة الحملات والنشرات البريدية دون التأثير على سمعة البريد الأساسي.",
+  "home.section.who.li5.label": "{$START_TAG_STRONG}المستخدمون اليوميون{$CLOSE_TAG_STRONG} – الحفاظ على حسابات Gmail وOutlook وYahoo نظيفة ومخصصة للاستخدام الشخصي.",
+  "home.section.who.li6.label": "{$START_TAG_STRONG}اللاعبون{$CLOSE_TAG_STRONG} – توثيق الحسابات على Steam وEpic Games وRockstar دون مشاركة بريدهم الخاص.",
+  "home.section.who.li7.label": "{$START_TAG_STRONG}مستخدمي وسائل التواصل{$CLOSE_TAG_STRONG} – إنشاء حسابات آمنة على إنستغرام، ديسكورد، ريديت، تيك توك، أو تيليجرام.",
+  "home.section.who.li8.label": "{$START_TAG_STRONG}المستقلون{$CLOSE_TAG_STRONG} – إدارة تسجيلات العملاء، التجارب، والأدوات باستخدام صناديق بريد مؤقتة.",
+  "home.section.who.li9.label": "{$START_TAG_STRONG}المهتمون بالخصوصية{$CLOSE_TAG_STRONG} – البقاء مجهولين، حماية البيانات، والاستمتاع باتصال خالٍ من الرسائل المزعجة.",
+  "home.section.who.outro.label": "استنادًا إلى أكثر من 500,000 مستخدم لـ TempMail4U حول العالم · آخر تحديث سبتمبر 2025",
+  "home.section.variants.li1.label": "{$START_TAG_STRONG}بريد مؤقت 10 دقائق{$CLOSE_TAG_STRONG} – مثالي للحصول على رموز سريعة لمرة واحدة",
+  "home.section.faq.a1.label": "البريد المؤقت (المعروف أيضًا بصندوق بريد لمرة واحدة أو البريد القابل للتصرف أو البريد الوهمي) هو حساب قصير المدى يمكنك استخدامه للتسجيل في المواقع، استلام رموز التحقق، أو الحفاظ على صندوق بريدك الحقيقي آمنًا من الرسائل المزعجة.",
+  "home.section.faq.social.q11.label": "هل يمكنني استخدام البريد المؤقت لوسائل التواصل والتطبيقات؟",
+  "home.section.faq.social.a11.label": "نعم، TempMail4U يعمل لإنشاء وتوثيق الحسابات على إنستغرام، فيسبوك، سناب شات، تويتر X، ديسكورد، ريديت، تيك توك، تيليجرام، وKick. كما يدعم خدمات البث مثل نتفليكس وأمازون برايم، ومنصات الألعاب مثل Steam وEpic Games وRockstar. يمكنك استلام OTP ورموز التحقق فورًا مع الحفاظ على خصوصية بريدك الشخصي.",
+  "home.section.faq.a6.label": "لا. هذه الصناديق مخصصة للاستقبال فقط. تم تصميمها للتسجيلات، التحقق، والاستخدام السريع لمرة واحدة، وليست للإرسال أو التواصل طويل الأمد.",
+  "home.section.faq.a9.label": "نعم. نوفر {$START_TAG_STRONG}بريد مؤقت 10 دقائق{$CLOSE_TAG_STRONG} بالإضافة إلى نسخ 20 دقيقة و30 دقيقة للاستخدام السريع والمؤقت. وهي مثالية للتسجيلات القصيرة أو رموز التحقق لمرة واحدة.",
+  "privacy.lastUpdated": "آخر تحديث: سبتمبر 2025"
+
   }
 }
