--- a/src/locale/messages.fr.json
+++ b/src/locale/messages.fr.json
@@ -255,9 +255,6 @@
     "seo.email30min.keywords": "email 30 minutes, email temporaire prolongé, boîte jetable, temp mail, vérification pro, 30 min email",
     "home.section.hero.title.label": " Service d’email temporaire gratuit ",
     "home.section.hero.subtitle.label": " Créez instantanément un {$START_TAG_STRONG}email temporaire{$CLOSE_TAG_STRONG} avec {$START_TAG_STRONG}TempMail4U{$CLOSE_TAG_STRONG}. Obtenez une {$START_EMPHASISED_TEXT}adresse mail jetable{$CLOSE_EMPHASISED_TEXT} qui protège votre vie privée , sans inscription, sans spam, sans risque. Utilisez-la pour les inscriptions rapides, tests d’apps, téléchargements, ou dès que vous avez besoin d’un {$START_EMPHASISED_TEXT}burner email{$CLOSE_EMPHASISED_TEXT} pour garder votre vraie boîte propre. ",
-    "home.section.what.title.label": " Qu’est-ce qu’un email temporaire ? ",
-    "home.section.what.para1.label": " Un {$START_TAG_STRONG}email temporaire{$CLOSE_TAG_STRONG} (aussi appelé {$START_EMPHASISED_TEXT}email jetable, faux e-mail, burner mail ou temp mail{$CLOSE_EMPHASISED_TEXT}) est une boîte éphémère pour vos activités en ligne. Au lieu de donner votre Gmail/Outlook/Yahoo personnel, vous obtenez une boîte anonyme qui s’auto-supprime après un délai.",
-    "home.section.what.para2.label": " Parfait pour {$START_TAG_STRONG}les inscriptions, téléchargements, codes de vérification et tests d’applications{$CLOSE_TAG_STRONG}. Une fois terminé, l’adresse disparaît , votre e-mail principal reste sûr et sans spam. ",
     "home.section.why.title.label": " Pourquoi avez-vous besoin d’un temp mail ? ",
     "home.section.why.intro.label": " Partager votre vrai e-mail partout est risqué : revente à des marketeurs, fuites de données, spam. {$START_TAG_STRONG}Utiliser un email jetable vous redonne le contrôle.{$CLOSE_TAG_STRONG}",
     "home.section.why.li1.label": "Protégez votre boîte personnelle du spam et des pubs",
@@ -273,20 +270,13 @@
     "home.section.how.step3.title.label": " 3. Sauvegardez-la ou laissez expirer ",
     "home.section.how.step3.desc.label": " Par défaut, les emails restent 24 h. Vous pouvez enregistrer le lien de votre boîte et la garder active jusqu’à 7 jours. ",
     "home.section.when.title.label": " Quand utiliser un temp mail ? ",
-    "home.section.when.intro.label": " Un mail jetable n’est pas pour tout ; c’est idéal pour les tâches rapides, à faible risque et jetables. Exemples populaires : ",
-    "home.section.when.card1.label": "Inscriptions uniques à des sites",
+   
     "home.section.when.card2.label": "Tests d’apps, betas ou outils SaaS",
     "home.section.when.card3.label": "Réductions & coupons shopping",
     "home.section.when.card4.label": "Téléchargements d’e-books/ressources",
     "home.section.when.card5.label": "Éviter les newsletters non désirées",
     "home.section.when.card6.label": "Rester anonyme sur forums/blogs",
     "home.section.who.title.label": " Qui utilise un burner email ? ",
-    "home.section.who.intro.label": " Pas uniquement pour les technophiles. {$START_TAG_STRONG}Toute personne soucieuse de confidentialité, sécurité ou d’une boîte propre y gagne :{$CLOSE_TAG_STRONG}",
-    "home.section.who.li1.label": "{$START_TAG_STRONG}Étudiants{$CLOSE_TAG_STRONG} pour outils et ressources d’étude",
-    "home.section.who.li2.label": "{$START_TAG_STRONG}Développeurs & testeurs{$CLOSE_TAG_STRONG} pour créer des comptes de test",
-    "home.section.who.li3.label": "{$START_TAG_STRONG}Acheteurs{$CLOSE_TAG_STRONG} pour bons plans, coupons et essais",
-    "home.section.who.li4.label": "{$START_TAG_STRONG}Marketeurs{$CLOSE_TAG_STRONG} pour tester des campagnes sans risquer la boîte principale",
-    "home.section.who.li5.label": "{$START_TAG_STRONG}Utilisateurs du quotidien{$CLOSE_TAG_STRONG} souhaitant rester sans spam",
     "home.section.comparison.title.label": " Email temporaire vs email classique ",
     "home.section.comparison.th.feature.label": "Fonction",
     "home.section.comparison.th.temp.label": "Email temporaire",
@@ -352,13 +342,11 @@
     "home.section.security.para.label": " Contrairement aux services douteux, nous ne vous pistons pas, ne journalisons pas vos données et ne vendons rien. Chaque boîte est {$START_TAG_STRONG}privée, anonyme et auto-supprimée{$CLOSE_TAG_STRONG} à la fin. La sécurité et la sérénité à chaque usage. ",
     "home.section.variants.title.label": " Nos types de temp mail ",
     "home.section.variants.intro.label": " Chaque tâche a sa durée idéale , d’où nos options : ",
-    "home.section.variants.li1.label": "{$START_TAG_STRONG}Mail 10 minutes{$CLOSE_TAG_STRONG} , parfait pour codes uniques",
     "home.section.variants.li2.label": "{$START_TAG_STRONG}Mail 20 minutes{$CLOSE_TAG_STRONG} , un peu plus de temps pour s’inscrire",
     "home.section.variants.li3.label": "{$START_TAG_STRONG}Mail 30 minutes{$CLOSE_TAG_STRONG} , accès temporaire prolongé",
     "home.section.variants.li4.label": "{$START_TAG_STRONG}Boîte sauvegardée 7 jours{$CLOSE_TAG_STRONG} , idéale pour projets et suivis",
     "home.section.faq.title.label": " FAQ sur l’email temporaire ",
     "home.section.faq.q1.label": "Qu’est-ce qu’un email temporaire ?",
-    "home.section.faq.a1.label": " Un email temporaire (aussi « boîte à usage unique », « boîte jetable » ou « burner ») est un compte éphémère pour s’inscrire, recevoir des codes de vérification et protéger votre vraie boîte du spam. ",
     "home.section.faq.q2.label": "Comment créer une adresse jetable ?",
     "home.section.faq.a2.label": " Aucune inscription : ouvrez cette page et votre boîte anonyme est générée instantanément. Vous pouvez l’actualiser ou choisir un nom d’utilisateur avant le symbole {$INTERPOLATION}. ",
     "home.section.faq.q3.label": "Combien de temps dure une boîte temporaire ?",
@@ -368,13 +356,11 @@
     "home.section.faq.q5.label": "À quoi sert un faux e-mail ?",
     "home.section.faq.a5.label": " Idéal pour s’inscrire sur de nouveaux sites, tester des apps, acheter en ligne, télécharger des fichiers , sans dévoiler votre adresse principale. ",
     "home.section.faq.q6.label": "Puis-je envoyer des e-mails avec ?",
-    "home.section.faq.a6.label": " Non. Boîtes en réception uniquement. Pensées pour inscriptions, vérifications et usage ponctuel, pas pour l’envoi ni l’échange long terme. ",
     "home.section.faq.q7.label": "Différence entre temp mail et e-mail classique ?",
     "home.section.faq.a7.label": " Les services classiques (Gmail, Yahoo, Outlook) demandent des infos, sont permanents et reçoivent du spam. Un temp mail est anonyme, sans inscription et expire automatiquement. ",
     "home.section.faq.q8.label": "Puis-je prolonger la durée ?",
     "home.section.faq.a8.label": " Oui , en sauvegardant la session ou en copiant votre lien d’accès unique, revenez sous 7 jours. Après, la boîte est supprimée définitivement. ",
     "home.section.faq.q9.label": "Avez-vous une option mail 10 minutes ?",
-    "home.section.faq.a9.label": " Oui. Nous proposons {$START_TAG_STRONG}mail 10 minutes{$CLOSE_TAG_STRONG} ainsi que 20 et 30 minutes , parfait pour inscriptions courtes et codes uniques. ",
     "home.section.faq.q10.label": "Pourquoi utiliser une boîte privée plutôt que mon vrai e-mail ?",
     "home.section.faq.a10.label": " Pour protéger votre vie privée, éviter le spam, garder votre boîte propre et réduire les risques de fuite/revente de données. ",
     "home.section.cta.title.label": " Vivez une communication vraiment privée ",
@@ -386,7 +372,6 @@
     "seo.home.keywords": "email temporaire, temp mail, email jetable, burner mail, mail anonyme, faux email, anti-spam, vérification email, email privé, boîte temporaire",
     "seo.home.siteName": "TempMail4u",
     "privacy.title": "Politique de confidentialité",
-    "privacy.lastUpdated": "Dernière mise à jour : décembre 2024",
     "privacy.introduction.title": "1. Introduction",
     "privacy.introduction.content": " Bienvenue sur le Service d’email temporaire (« nous », « notre »). Nous protégeons votre confidentialité et la sécurité de vos informations. Cette Politique décrit la collecte, l’utilisation, la divulgation et la protection de vos données lorsque vous utilisez notre service d’e-mail temporaire. ",
     "privacy.infoCollect.title": "2. Informations que nous collectons",
@@ -543,6 +528,39 @@
   , "seo.email30min.faq.q7": "Combien d'e-mails puis-je recevoir ?"
   , "seo.email30min.faq.a7": "Aucune limite pendant la fenêtre de 30 minutes."
   , "breadcrumbs.home": "Accueil"
-  , "privacyPolicy.title": "Politique de confidentialité"
+  , "privacyPolicy.title": "Politique de confidentialité",
+
+
+
+  
+  "home.section.what.title.label": "Qu’est-ce qu’un email temporaire ? (Boîte à usage unique)",
+  "home.section.what.para1.label": "Un {$START_TAG_STRONG}email temporaire{$CLOSE_TAG_STRONG} (aussi appelé {$START_EMPHASISED_TEXT}email jetable, boîte mail à usage unique, adresse fictive, ou temp mail{$CLOSE_EMPHASISED_TEXT}) est une boîte à durée limitée que vous pouvez utiliser pour vos activités en ligne. Au lieu de donner votre adresse Gmail, Outlook ou Yahoo personnelle, vous obtenez une boîte anonyme qui s’efface automatiquement après un certain temps.",
+  "home.section.what.para2.label": "C’est parfait pour {$START_TAG_STRONG}les inscriptions sur des sites, le téléchargement de fichiers, la réception de codes de vérification ou le test de nouvelles applications{$CLOSE_TAG_STRONG}. Une fois terminé, l’adresse disparaît et votre boîte principale reste protégée et sans spam.",
+  "home.section.when.intro.label": "Un email temporaire ne sert pas à tout. Il est surtout utile pour des tâches rapides, à faible risque et jetables. Beaucoup l’utilisent pour {$START_TAG_STRONG}les inscriptions sur les réseaux sociaux{$CLOSE_TAG_STRONG} comme Instagram, Discord, Reddit, TikTok, Telegram ou Facebook. Il est aussi pratique pour tester des applications, télécharger des ressources ou rester anonyme en ligne.",
+  "home.section.when.card1.label": "Inscriptions ponctuelles sur des sites",
+  "home.section.when.card7.label": "Créer des comptes sur Instagram, Facebook, Snapchat et Twitter X",
+  "home.section.when.card8.label": "Rejoindre Discord, Reddit et Telegram en toute sécurité",
+  "home.section.when.card9.label": "S’inscrire sur TikTok ou Kick avec réception immédiate d’OTP",
+  "home.section.when.card10.label": "Vérifier des comptes de jeux sur Steam, Epic Games et Rockstar",
+  "home.section.when.card11.label": "Accéder à des plateformes de streaming comme Netflix, Amazon Prime et Hulu",
+  "home.section.who.intro.label": "Les emails temporaires sont utiles à de nombreux groupes. {$START_TAG_STRONG}Voici les plus courants et leurs avantages :{$CLOSE_TAG_STRONG}",
+  "home.section.who.li1.label": "{$START_TAG_STRONG}Étudiants{$CLOSE_TAG_STRONG} – s’inscrire à des outils d’étude, cours en ligne et portails universitaires sans saturer leur boîte principale.",
+  "home.section.who.li2.label": "{$START_TAG_STRONG}Développeurs et testeurs{$CLOSE_TAG_STRONG} – créer rapidement des comptes de test pour des applications, outils SaaS et versions bêta.",
+  "home.section.who.li3.label": "{$START_TAG_STRONG}Acheteurs{$CLOSE_TAG_STRONG} – profiter d’offres, coupons et essais gratuits sur des sites e-commerce tout en évitant le spam.",
+  "home.section.who.li4.label": "{$START_TAG_STRONG}Marketeurs{$CLOSE_TAG_STRONG} – tester des campagnes et newsletters sans risquer la réputation de leur boîte principale.",
+  "home.section.who.li5.label": "{$START_TAG_STRONG}Utilisateurs quotidiens{$CLOSE_TAG_STRONG} – garder Gmail, Outlook ou Yahoo propres et centrés sur un usage personnel.",
+  "home.section.who.li6.label": "{$START_TAG_STRONG}Gamers{$CLOSE_TAG_STRONG} – vérifier des comptes sur Steam, Epic Games et Rockstar sans exposer leur adresse privée.",
+  "home.section.who.li7.label": "{$START_TAG_STRONG}Utilisateurs de réseaux sociaux{$CLOSE_TAG_STRONG} – créer des comptes sécurisés sur Instagram, Discord, Reddit, TikTok ou Telegram.",
+  "home.section.who.li8.label": "{$START_TAG_STRONG}Freelances{$CLOSE_TAG_STRONG} – gérer les inscriptions clients, essais de projets et outils avec des boîtes temporaires.",
+  "home.section.who.li9.label": "{$START_TAG_STRONG}Personnes axées sur la confidentialité{$CLOSE_TAG_STRONG} – rester anonymes, protéger leurs données et profiter d’une communication sans spam.",
+  "home.section.who.outro.label": "Basé sur plus de 500 000 utilisateurs de TempMail4U dans le monde · Mis à jour en septembre 2025",
+  "home.section.variants.li1.label": "{$START_TAG_STRONG}Mail 10 minutes{$CLOSE_TAG_STRONG} – idéal pour des codes rapides à usage unique",
+  "home.section.faq.a1.label": "Un email temporaire (aussi appelé boîte à usage unique, boîte jetable ou adresse fictive) est un compte de courte durée que vous pouvez utiliser pour vous inscrire sur des sites, recevoir des codes de vérification ou garder votre boîte réelle protégée contre le spam.",
+  "home.section.faq.social.q11.label": "Puis-je utiliser un email temporaire pour les réseaux sociaux et applications ?",
+  "home.section.faq.social.a11.label": "Oui, TempMail4U permet de créer et vérifier des comptes sur Instagram, Facebook, Snapchat, Twitter X, Discord, Reddit, TikTok, Telegram et Kick. Il fonctionne aussi avec des services de streaming comme Netflix et Amazon Prime, et des plateformes de jeux comme Steam, Epic Games et Rockstar. Vous pouvez recevoir des OTP et codes de vérification instantanément tout en protégeant votre adresse personnelle.",
+  "home.section.faq.a6.label": "Non. Ces boîtes sont uniquement destinées à la réception. Elles sont conçues pour des inscriptions, vérifications et utilisations rapides à usage unique, pas pour l’envoi ou la communication à long terme.",
+  "home.section.faq.a9.label": "Oui. Nous proposons {$START_TAG_STRONG}un email temporaire de 10 minutes{$CLOSE_TAG_STRONG} ainsi que des variantes de 20 et 30 minutes pour un usage rapide et jetable. Idéal pour des inscriptions courtes ou des codes de vérification ponctuels.",
+  "privacy.lastUpdated": "Dernière mise à jour : septembre 2025"
+
   }
 }
