--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -275,9 +275,9 @@
     "seo.email30min.faq.a7": "There's no limit within the 30-minute window.",
     "home.section.hero.title.label": " Free Temporary Email Service ",
     "home.section.hero.subtitle.label": " Instantly create a {$START_TAG_STRONG}temporary email{$CLOSE_TAG_STRONG} with {$START_TAG_STRONG}TempMail4U{$CLOSE_TAG_STRONG}. Get a {$START_EMPHASISED_TEXT}disposable email address{$CLOSE_EMPHASISED_TEXT} that protects your privacy, no signup, no spam, no risk. Use it for quick website registrations, app testing, downloads, or anytime you need a secure {$START_EMPHASISED_TEXT}burner email{$CLOSE_EMPHASISED_TEXT} to keep your real inbox clean. ",
-    "home.section.what.title.label": " What is a Temporary Email? ",
-    "home.section.what.para1.label": " A {$START_TAG_STRONG}temporary email{$CLOSE_TAG_STRONG} (also called {$START_EMPHASISED_TEXT}disposable email, fake email, burner mail, or temp mail{$CLOSE_EMPHASISED_TEXT}) is a short-lived inbox that you can use for online activities. Instead of giving out your personal Gmail, Outlook, or Yahoo address, you get an instant anonymous inbox that automatically deletes itself after a certain time. ",
-    "home.section.what.para2.label": " It’s perfect for {$START_TAG_STRONG}website sign-ups, downloading files, receiving verification codes, or testing new apps{$CLOSE_TAG_STRONG}. Once you’re done, the address vanishes, leaving your personal email safe and spam-free. ",
+    "home.section.what.title.label": " What is a Temporary Email? (One Time Inbox) ",
+    "home.section.what.para1.label": " A {$START_TAG_STRONG}temporary email{$CLOSE_TAG_STRONG} (also called {$START_EMPHASISED_TEXT}disposable email, one time inbox fake email, burner mail, or temp mail{$CLOSE_EMPHASISED_TEXT}) is a short lived inbox that you can use for online activities. Instead of giving out your personal Gmail, Outlook, or Yahoo address, you get an instant anonymous inbox that automatically deletes itself after a certain time. ",
+    "home.section.what.para2.label": " It’s perfect for {$START_TAG_STRONG}website sign ups, downloading files, receiving verification codes, or testing new apps{$CLOSE_TAG_STRONG}. Once you’re done, the address vanishes, leaving your personal email safe and spam free. ",
     "home.section.why.title.label": " Why Do You Need Temp Mail? ",
     "home.section.why.intro.label": " Sharing your real email everywhere is risky. Companies often sell addresses to marketers, hackers target leaked databases, and spam clogs your inbox. {$START_TAG_STRONG}Using a disposable email gives you control.{$CLOSE_TAG_STRONG}",
     "home.section.why.li1.label": "Protect your personal inbox from endless spam and ads",
@@ -293,20 +293,30 @@
     "home.section.how.step3.title.label": " 3. Save or Let It Expire ",
     "home.section.how.step3.desc.label": " By default, emails last 24 hours. But if needed, you can bookmark your inbox link and keep it active for up to 7 days. ",
     "home.section.when.title.label": " When Should You Use Temp Mail? ",
-    "home.section.when.intro.label": " A temporary email isn’t for everything, it’s best used for quick, low-risk, and disposable tasks. Here are the most popular uses: ",
-    "home.section.when.card1.label": "One-time website registrations",
+    "home.section.when.intro.label": " A temporary email isn’t for everything, it’s best used for quick, low-risk, and disposable tasks. Many people rely on it for {$START_TAG_STRONG}social media signups{$CLOSE_TAG_STRONG} like Instagram, Discord, Reddit, TikTok, Telegram, or Facebook. It’s also handy for testing apps, downloading resources, or staying anonymous online. ",
+    "home.section.when.card1.label": "One time website registrations",
     "home.section.when.card2.label": "Testing apps, betas, or SaaS tools",
     "home.section.when.card3.label": "Online shopping discounts & coupons",
     "home.section.when.card4.label": "Downloading free ebooks or resources",
     "home.section.when.card5.label": "Avoiding unwanted newsletters",
     "home.section.when.card6.label": "Staying anonymous on forums or blogs",
+    "home.section.when.card7.label": "Creating accounts on Instagram, Facebook, Snapchat, and Twitter X",
+    "home.section.when.card8.label": "Joining Discord, Reddit, and Telegram safely",
+    "home.section.when.card9.label": "Signing up for TikTok or Kick with instant OTPs",
+    "home.section.when.card10.label": "Verifying gaming accounts on Steam, Epic Games, and Rockstar",
+    "home.section.when.card11.label": "Accessing streaming platforms like Netflix, Amazon Prime, and Hulu",
     "home.section.who.title.label": " Who Uses Burner Emails? ",
-    "home.section.who.intro.label": " Temporary emails are not just for techies. {$START_TAG_STRONG}Anyone who values privacy, security, or a clutter-free inbox can benefit:{$CLOSE_TAG_STRONG}",
-    "home.section.who.li1.label": "{$START_TAG_STRONG}Students{$CLOSE_TAG_STRONG} signing up for study tools and resources",
-    "home.section.who.li2.label": "{$START_TAG_STRONG}Developers & testers{$CLOSE_TAG_STRONG} creating test accounts",
-    "home.section.who.li3.label": "{$START_TAG_STRONG}Shoppers{$CLOSE_TAG_STRONG} hunting deals, coupons, or free trials",
-    "home.section.who.li4.label": "{$START_TAG_STRONG}Marketers{$CLOSE_TAG_STRONG} testing campaigns without risking main inboxes",
-    "home.section.who.li5.label": "{$START_TAG_STRONG}Everyday users{$CLOSE_TAG_STRONG} who just want to stay spam-free",
+    "home.section.who.intro.label": " Temporary emails are useful for many groups of people. {$START_TAG_STRONG}Here are the most common users and how they benefit:{$CLOSE_TAG_STRONG}",
+    "home.section.who.li1.label": "{$START_TAG_STRONG}Students{$CLOSE_TAG_STRONG} – sign up for study tools, online courses, and university portals without filling your main inbox. ",
+    "home.section.who.li2.label": "{$START_TAG_STRONG}Developers & testers{$CLOSE_TAG_STRONG} – create test accounts for apps, SaaS tools, and betas quickly. ",
+    "home.section.who.li3.label": "{$START_TAG_STRONG}Shoppers{$CLOSE_TAG_STRONG} – grab deals, coupons, and free trials on ecommerce sites while avoiding spam. ",
+    "home.section.who.li4.label": "{$START_TAG_STRONG}Marketers{$CLOSE_TAG_STRONG} – test campaigns and newsletters without risking their main inbox reputation. ",
+    "home.section.who.li5.label": "{$START_TAG_STRONG}Everyday users{$CLOSE_TAG_STRONG} – keep Gmail, Outlook, or Yahoo accounts clean and focused on personal use. ",
+    "home.section.who.li6.label": "{$START_TAG_STRONG}Gamers{$CLOSE_TAG_STRONG} – verify accounts on Steam, Epic Games, and Rockstar without exposing private emails. ",
+    "home.section.who.li7.label": "{$START_TAG_STRONG}Social media users{$CLOSE_TAG_STRONG} – create safe accounts on Instagram, Discord, Reddit, TikTok, or Telegram. ",
+    "home.section.who.li8.label": "{$START_TAG_STRONG}Freelancers{$CLOSE_TAG_STRONG} – manage client signups, project trials, and tools with disposable inboxes. ",
+    "home.section.who.li9.label": "{$START_TAG_STRONG}Privacy-focused users{$CLOSE_TAG_STRONG} – stay anonymous, protect data, and enjoy spam-free communication. ",
+    "home.section.who.outro.label": " Based on 500,000+ TempMail4U users worldwide · Updated September 2025 ",
     "home.section.comparison.title.label": " Temporary Email vs Regular Email ",
     "home.section.comparison.th.feature.label": "Feature",
     "home.section.comparison.th.temp.label": "Temporary Email",
@@ -372,15 +382,17 @@
     "home.section.security.para.label": " Unlike shady services, we don’t track you, log your data, or sell your information. Every inbox is {$START_TAG_STRONG}private, anonymous, and auto-deleted{$CLOSE_TAG_STRONG} after its lifetime ends. This ensures complete safety and peace of mind whenever you use Temp Mail. ",
     "home.section.variants.title.label": " Types of Temp Mail We Offer ",
     "home.section.variants.intro.label": " Different tasks need different lifespans. That’s why we provide multiple options: ",
-    "home.section.variants.li1.label": "{$START_TAG_STRONG}10-Minute Mail{$CLOSE_TAG_STRONG} – perfect for quick one-time codes",
+    "home.section.variants.li1.label": "{$START_TAG_STRONG}10-Minute Mail{$CLOSE_TAG_STRONG} – perfect for quick one time codes",
     "home.section.variants.li2.label": "{$START_TAG_STRONG}20-Minute Mail{$CLOSE_TAG_STRONG} – a little more time for registrations",
     "home.section.variants.li3.label": "{$START_TAG_STRONG}30-Minute Mail{$CLOSE_TAG_STRONG} – when you need extended temporary access",
     "home.section.variants.li4.label": "{$START_TAG_STRONG}7-Day Saved Inbox{$CLOSE_TAG_STRONG} – ideal for projects, trials, and follow-ups",
     "home.section.faq.title.label": " Frequently Asked Questions about Temporary Email ",
     "home.section.faq.q1.label": "What is a temporary email?",
-    "home.section.faq.a1.label": " A temporary email (also called a one-time inbox, disposable mailbox, or burner address) is a short-lived account you can use to sign up on websites, receive verification codes, or keep your real inbox safe from spam. ",
+    "home.section.faq.a1.label": " A temporary email (also called a one time inbox, disposable mailbox, or burner address) is a short-lived account you can use to sign up on websites, receive verification codes, or keep your real inbox safe from spam. ",
     "home.section.faq.q2.label": "How do I create a disposable email?",
     "home.section.faq.a2.label": " You don’t need to register. Simply open this page and your anonymous inbox is generated instantly. You can refresh for a new one or choose a custom username before the {$INTERPOLATION} symbol. ",
+    "home.section.faq.social.q11.label": "Can I use temp mail for social media and apps?",
+    "home.section.faq.social.a11.label": " Yes, TempMail4U works for creating and verifying accounts on Instagram, Facebook, Snapchat, Twitter X, Discord, Reddit, TikTok, Telegram, and Kick. It also supports streaming services like Netflix and Amazon Prime, and gaming platforms such as Steam, Epic Games, and Rockstar. You can receive OTPs and verification codes instantly while keeping your personal email private. ",
     "home.section.faq.q3.label": "How long does a temporary inbox last?",
     "home.section.faq.a3.label": " By default, emails stay for 24 hours in your browser. If you click save, your inbox can remain active for 7 days. We also offer {$START_TAG_STRONG}10 minute mail{$CLOSE_TAG_STRONG}, {$START_TAG_STRONG}20 minute mail{$CLOSE_TAG_STRONG}, and {$START_TAG_STRONG}30 minute mail{$CLOSE_TAG_STRONG} options. ",
     "home.section.faq.q4.label": "Is a disposable inbox safe to use?",
@@ -388,13 +400,13 @@
     "home.section.faq.q5.label": "What can I use a fake email for?",
     "home.section.faq.a5.label": " These short-term addresses are best for signing up on new websites, app testing, online shopping, downloading files, or anywhere you don’t want to share your personal email. They help keep your main inbox clean. ",
     "home.section.faq.q6.label": "Can I send emails from this address?",
-    "home.section.faq.a6.label": " No. These inboxes are receive-only. They are designed for registrations, verifications, and quick one-time use, not for sending or long-term communication. ",
+    "home.section.faq.a6.label": " No. These inboxes are receive-only. They are designed for registrations, verifications, and quick one time email use, not for sending or long-term communication. ",
     "home.section.faq.q7.label": "What’s the difference between temp mail and regular email?",
     "home.section.faq.a7.label": " Regular emails (like Gmail, Yahoo, Outlook) require personal info, stay permanent, and often get spam. Temporary inboxes are anonymous, require no signup, and automatically expire. ",
     "home.section.faq.q8.label": "Can I extend the life of my inbox?",
     "home.section.faq.a8.label": " Yes. By saving the session or copying your unique access link, you can return anytime within 7 days. After that, the inbox is deleted permanently. ",
     "home.section.faq.q9.label": "Is there a 10 minute mail option?",
-    "home.section.faq.a9.label": " Yes. We provide {$START_TAG_STRONG}10 minute temp mail{$CLOSE_TAG_STRONG} as well as 20 minute and 30 minute variants for quick and disposable use. These are perfect for short sign-ups or one-time verification codes. ",
+    "home.section.faq.a9.label": " Yes. We provide {$START_TAG_STRONG}10 minute temp mail{$CLOSE_TAG_STRONG} as well as 20 minute and 30 minute variants for quick and disposable use. These are perfect for short sign-ups or one time email verification codes. ",
     "home.section.faq.q10.label": "Why should I use a private inbox instead of my real one?",
     "home.section.faq.a10.label": " Using a temporary address protects your privacy, avoids spam, keeps your main inbox clean, and reduces the risk of your personal data being leaked or sold. ",
     "home.section.cta.title.label": " Experience Truly Private Communication ",
@@ -426,7 +438,7 @@
     "seo.home.faq.q10": "Why should I use a private inbox instead of my real one?",
     "seo.home.faq.a10": "Using a temporary address protects your privacy, avoids spam, keeps your main inbox clean, and reduces the risk of your personal data being leaked or sold.",
     "privacy.title": "Privacy Policy",
-    "privacy.lastUpdated": "Last updated: December 2024",
+    "privacy.lastUpdated": "Last updated: September 2025",
     "privacy.introduction.title": "1. Introduction",
     "privacy.introduction.content": " Welcome to Temporary Email Service (\"we,\" \"our,\" or \"us\"). We are committed to protecting your privacy and ensuring the security of your personal information. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our temporary email service. ",
     "privacy.infoCollect.title": "2. Information We Collect",
