--- a/src/locale/messages.ru.json
+++ b/src/locale/messages.ru.json
@@ -269,9 +269,6 @@
     "seo.email30min.faq.a7": "Ограничений в пределах 30 минут нет.",
     "home.section.hero.title.label": " Бесплатный сервис временной почты ",
     "home.section.hero.subtitle.label": " Мгновенно создайте {$START_TAG_STRONG}временный адрес{$CLOSE_TAG_STRONG} с {$START_TAG_STRONG}TempMail4U{$CLOSE_TAG_STRONG}. Получите {$START_EMPHASISED_TEXT}одноразовый адрес{$CLOSE_EMPHASISED_TEXT}, который защищает вашу приватность. Без регистрации, без спама, без риска. Используйте для быстрых регистраций, тестирования приложений, загрузок и когда нужен безопасный {$START_EMPHASISED_TEXT}одноразовый email{$CLOSE_EMPHASISED_TEXT}, чтобы сохранить чистоту основной почты. ",
-    "home.section.what.title.label": " Что такое временная почта? ",
-    "home.section.what.para1.label": " {$START_TAG_STRONG}Временная почта{$CLOSE_TAG_STRONG} (также {$START_EMPHASISED_TEXT}одноразовая почта, фейк-почта, burner mail, temp mail{$CLOSE_EMPHASISED_TEXT}) - это краткоживущий ящик для онлайн-активностей. Вместо того чтобы указывать личный Gmail, Outlook или Yahoo, вы получаете анонимный адрес, который автоматически удаляется через заданное время.",
-    "home.section.what.para2.label": " Это удобно для {$START_TAG_STRONG}регистраций на сайтах, загрузок, получения кодов подтверждения и тестирования приложений{$CLOSE_TAG_STRONG}. По завершении адрес исчезает, а ваша основная почта остаётся чистой и без спама.",
     "home.section.why.title.label": " Зачем нужна временная почта? ",
     "home.section.why.intro.label": " Раздавать везде личный email рискованно. Компании могут продавать базы, злоумышленники атакуют утечки, а спам переполняет ящик. {$START_TAG_STRONG}Одноразовый адрес даёт контроль.{$CLOSE_TAG_STRONG}",
     "home.section.why.li1.label": "Защитите личный ящик от спама и рекламы",
@@ -287,8 +284,7 @@
     "home.section.how.step3.title.label": " 3. Сохраните или дайте ему истечь ",
     "home.section.how.step3.desc.label": " По умолчанию письма хранятся 24 часа. При необходимости сохраните ссылку на ящик - он будет активен до 7 дней.",
     "home.section.when.title.label": " Когда стоит пользоваться временной почтой ",
-    "home.section.when.intro.label": " Временная почта подходит не для всего. Она лучше всего для быстрых, низкорисковых и одноразовых задач. Популярные сценарии:",
-    "home.section.when.card1.label": "Разовые регистрации на сайтах",
+
     "home.section.when.card2.label": "Тестирование приложений, бет и SaaS",
     "home.section.when.card3.label": "Скидки и купоны при онлайн-покупках",
     "home.section.when.card4.label": "Загрузка бесплатных книг и материалов",
@@ -296,12 +292,6 @@
     "home.section.when.card6.label": "Анонимность на форумах и в блогах",
     "home.section.wwho.title.label": " Кто использует одноразовые адреса? ",
     "home.section.who.title.label": " Кто использует одноразовые адреса? ",
-    "home.section.who.intro.label": " Временная почта нужна не только технарям. {$START_TAG_STRONG}Любой, кто ценит приватность, безопасность и порядок во входящих, оценит её преимущества:{$CLOSE_TAG_STRONG}",
-    "home.section.who.li1.label": "{$START_TAG_STRONG}Студенты{$CLOSE_TAG_STRONG}, регистрирующиеся для доступа к учебным ресурсам",
-    "home.section.who.li2.label": "{$START_TAG_STRONG}Разработчики и тестировщики{$CLOSE_TAG_STRONG}, создающие тестовые аккаунты",
-    "home.section.who.li3.label": "{$START_TAG_STRONG}Покупатели{$CLOSE_TAG_STRONG}, ищущие скидки и триалы",
-    "home.section.who.li4.label": "{$START_TAG_STRONG}Маркетологи{$CLOSE_TAG_STRONG}, тестирующие кампании без риска для основного ящика",
-    "home.section.who.li5.label": "{$START_TAG_STRONG}Обычные пользователи{$CLOSE_TAG_STRONG}, которым важна чистота и отсутствие спама",
     "home.section.comparison.title.label": " Временная почта и обычная почта ",
     "home.section.comparison.th.feature.label": "Критерий",
     "home.section.comparison.th.temp.label": "Временная почта",
@@ -367,13 +357,11 @@
     "home.section.security.para.label": " В отличие от сомнительных сервисов, мы не отслеживаем, не логируем и не продаём ваши данные. Каждый ящик {$START_TAG_STRONG}приватный, анонимный и автоудаляемый{$CLOSE_TAG_STRONG} после окончания срока. Это гарантирует безопасность и спокойствие при использовании TempMail.",
     "home.section.variants.title.label": " Виды временной почты ",
     "home.section.variants.intro.label": " Разным задачам - разные сроки. Поэтому у нас несколько вариантов:",
-    "home.section.variants.li1.label": "{$START_TAG_STRONG}10 минут{$CLOSE_TAG_STRONG} - для одноразовых кодов",
     "home.section.variants.li2.label": "{$START_TAG_STRONG}20 минут{$CLOSE_TAG_STRONG} - когда нужно немного больше времени",
     "home.section.variants.li3.label": "{$START_TAG_STRONG}30 минут{$CLOSE_TAG_STRONG} - для расширенного доступа",
     "home.section.variants.li4.label": "{$START_TAG_STRONG}Сохранение на 7 дней{$CLOSE_TAG_STRONG} - идеально для проектов и последующих шагов",
     "home.section.faq.title.label": " Вопросы о временной почте ",
     "home.section.faq.q1.label": "Что такое временная почта?",
-    "home.section.faq.a1.label": " Временная почта - это одноразовый адрес для регистрации на сайтах, получения кодов и защиты основной почты от спама.",
     "home.section.faq.q2.label": "Как создать одноразовый адрес?",
     "home.section.faq.a2.label": " Регистрация не нужна. Просто откройте страницу - анонимный ящик создаётся автоматически. Можно обновить адрес или выбрать своё имя до символа {$INTERPOLATION}.",
     "home.section.faq.q3.label": "Сколько живёт временный ящик?",
@@ -383,13 +371,11 @@
     "home.section.faq.q5.label": "Для чего подходит фейк-почта?",
     "home.section.faq.a5.label": " Лучше всего для регистраций на новых сайтах, тестирования, онлайн-покупок и загрузок, когда не хотите указывать личную почту.",
     "home.section.faq.q6.label": "Можно отправлять письма с этого адреса?",
-    "home.section.faq.a6.label": " Нет. Эти ящики только для приёма. Они созданы для регистраций, проверок и одноразового использования.",
     "home.section.faq.q7.label": "Чем временная почта отличается от обычной?",
     "home.section.faq.a7.label": " Обычная почта требует личных данных, постоянна и часто ловит спам. Временная анонимна, без регистрации и автоматически истекает.",
     "home.section.faq.q8.label": "Можно продлить срок жизни ящика?",
     "home.section.faq.a8.label": " Да. Сохраните сессию или уникальную ссылку доступа и возвращайтесь в течение 7 дней. Затем ящик удаляется навсегда.",
     "home.section.faq.q9.label": "Есть вариант на 10 минут?",
-    "home.section.faq.a9.label": " Да. У нас есть {$START_TAG_STRONG}адрес на 10 минут{$CLOSE_TAG_STRONG}, а также на 20 и 30 минут. Они идеальны для коротких регистраций и одноразовых кодов.",
     "home.section.faq.q10.label": "Почему использовать приватный ящик вместо основного?",
     "home.section.faq.a10.label": " Это защищает приватность, помогает избегать спама, сохраняет чистоту основной почты и снижает риск утечки данных.",
     "home.section.cta.title.label": " Оцените по-настоящему приватную почту ",
@@ -421,7 +407,6 @@
     "seo.home.faq.q10": "Почему не использовать основную почту?",
     "seo.home.faq.a10": "Приватность, отсутствие спама, чистая основная почта и меньше риск утечек.",
     "privacy.title": "Политика конфиденциальности",
-    "privacy.lastUpdated": "Последнее обновление: декабрь 2024",
     "privacy.introduction.title": "1. Введение",
     "privacy.introduction.content": " Добро пожаловать в Temporary Email Service («мы», «наш», «нас»). Мы защищаем вашу приватность и безопасность данных. В этой Политике описано, как мы собираем, используем, раскрываем и защищаем информацию при использовании нашего сервиса временной почты. ",
     "privacy.infoCollect.title": "2. Какие данные мы собираем",
@@ -535,5 +520,39 @@
     "seo.email10min.faq.a8": "Подходит для краткосрочного использования, например OTP и подтверждений. Не рекомендуется для конфиденциальной личной информации.",
     "seo.email10min.faq.q9": "Лучше ли это, чем использовать фейковую почту?",
     "seo.email10min.faq.a9": "Да! В отличие от «фейковых» адресов, этот сервис предоставляет реальный рабочий ящик для получения писем."
+  
+  
+  
+  
+    ,
+  "home.section.what.title.label": "Что такое временная почта? (Одноразовый ящик)",
+  "home.section.what.para1.label": "{$START_TAG_STRONG}Временная почта{$CLOSE_TAG_STRONG} (также называемая {$START_EMPHASISED_TEXT}одноразовой, фейковой, или temp mail{$CLOSE_EMPHASISED_TEXT}) — это почтовый ящик с ограниченным сроком действия, который можно использовать для онлайн-активностей. Вместо того чтобы указывать свой Gmail, Outlook или Yahoo, вы получаете анонимный ящик, который автоматически удаляется через определённое время.",
+  "home.section.what.para2.label": "Она удобна для {$START_TAG_STRONG}регистрации на сайтах, загрузки файлов, получения кодов подтверждения или тестирования новых приложений{$CLOSE_TAG_STRONG}. После использования адрес исчезает, а ваш основной ящик остаётся защищённым и без спама.",
+  "home.section.when.intro.label": "Временная почта подходит не для всего. Лучше всего она работает для быстрых, малорисковых и одноразовых задач. Многие используют её для {$START_TAG_STRONG}регистрации в соцсетях{$CLOSE_TAG_STRONG}, таких как Instagram, Discord, Reddit, TikTok, Telegram или Facebook. Она также полезна для тестирования приложений, скачивания ресурсов или сохранения анонимности в сети.",
+  "home.section.when.card1.label": "Разовые регистрации на сайтах",
+  "home.section.when.card7.label": "Создание аккаунтов в Instagram, Facebook, Snapchat и Twitter X",
+  "home.section.when.card8.label": "Безопасное подключение к Discord, Reddit и Telegram",
+  "home.section.when.card9.label": "Регистрация в TikTok или Kick с мгновенным получением OTP",
+  "home.section.when.card10.label": "Подтверждение игровых аккаунтов в Steam, Epic Games и Rockstar",
+  "home.section.when.card11.label": "Доступ к платформам потокового видео, таким как Netflix, Amazon Prime и Hulu",
+  "home.section.who.intro.label": "Временная почта полезна для разных групп. {$START_TAG_STRONG}Вот самые частые пользователи и их выгоды:{$CLOSE_TAG_STRONG}",
+  "home.section.who.li1.label": "{$START_TAG_STRONG}Студенты{$CLOSE_TAG_STRONG} – регистрация в учебных сервисах, онлайн-курсах и университетских порталах без перегрузки основного ящика.",
+  "home.section.who.li2.label": "{$START_TAG_STRONG}Разработчики и тестировщики{$CLOSE_TAG_STRONG} – быстро создавать тестовые аккаунты для приложений, SaaS-сервисов и бета-версий.",
+  "home.section.who.li3.label": "{$START_TAG_STRONG}Покупатели{$CLOSE_TAG_STRONG} – получать скидки, купоны и бесплатные пробные периоды на сайтах e-commerce, избегая спама.",
+  "home.section.who.li4.label": "{$START_TAG_STRONG}Маркетологи{$CLOSE_TAG_STRONG} – тестировать кампании и рассылки без риска для репутации основного ящика.",
+  "home.section.who.li5.label": "{$START_TAG_STRONG}Обычные пользователи{$CLOSE_TAG_STRONG} – держать Gmail, Outlook или Yahoo чистыми и использовать только для личных целей.",
+  "home.section.who.li6.label": "{$START_TAG_STRONG}Геймеры{$CLOSE_TAG_STRONG} – подтверждать аккаунты в Steam, Epic Games и Rockstar без раскрытия личной почты.",
+  "home.section.who.li7.label": "{$START_TAG_STRONG}Пользователи соцсетей{$CLOSE_TAG_STRONG} – безопасно создавать аккаунты в Instagram, Discord, Reddit, TikTok или Telegram.",
+  "home.section.who.li8.label": "{$START_TAG_STRONG}Фрилансеры{$CLOSE_TAG_STRONG} – управлять клиентскими регистрациями, пробными проектами и сервисами через одноразовые ящики.",
+  "home.section.who.li9.label": "{$START_TAG_STRONG}Пользователи, заботящиеся о приватности{$CLOSE_TAG_STRONG} – оставаться анонимными, защищать данные и пользоваться почтой без спама.",
+  "home.section.who.outro.label": "Основано на данных более 500 000 пользователей TempMail4U по всему миру · Обновлено в сентябре 2025",
+  "home.section.variants.li1.label": "{$START_TAG_STRONG}10-минутная почта{$CLOSE_TAG_STRONG} – идеально для быстрых одноразовых кодов",
+  "home.section.faq.a1.label": "Временная почта (также одноразовый ящик, почта для разовой регистрации или фейл-адрес) — это краткосрочный аккаунт, который можно использовать для регистрации на сайтах, получения кодов подтверждения и защиты основного ящика от спама.",
+  "home.section.faq.social.q11.label": "Можно ли использовать временную почту для соцсетей и приложений?",
+  "home.section.faq.social.a11.label": "Да, TempMail4U подходит для создания и подтверждения аккаунтов в Instagram, Facebook, Snapchat, Twitter X, Discord, Reddit, TikTok, Telegram и Kick. Также работает с сервисами потокового видео, такими как Netflix и Amazon Prime, и игровыми платформами Steam, Epic Games и Rockstar. Вы можете получать OTP и коды подтверждения мгновенно, сохраняя конфиденциальность личной почты.",
+  "home.section.faq.a6.label": "Нет. Эти ящики предназначены только для приёма писем. Они созданы для регистраций, подтверждений и быстрого одноразового использования, но не для отправки или долгосрочной переписки.",
+  "home.section.faq.a9.label": "Да. Мы предоставляем {$START_TAG_STRONG}10-минутную временную почту{$CLOSE_TAG_STRONG}, а также варианты на 20 и 30 минут для быстрого и одноразового использования. Это удобно для коротких регистраций или получения кодов подтверждения.",
+  "privacy.lastUpdated": "Последнее обновление: сентябрь 2025"
+
   }
 }
